--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Hire me Project</title>
+       
+    <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree|K2D|Pacifico" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 </head>
 
