Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html> <html><head>
         <title>Hire me Project</title>
+       
+    <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree|K2D|Pacifico" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 <style>img {
     height: 175px;
@@ -7,10 +10,12 @@
 h1 {
     font-family: 'Bai Jamjuree', sans-serif;
 font-family: 'K2D', sans-serif;
-font-family: 'Lato', sans-serif;
+
+
+
 }
 body {
-font-family: 'Charmonman', cursive;
+font-family: 'oswald', cursive;
 }
 h2 {
 font-family: 'Anton', sans-serif;
