Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
     <head>
         <title>Hire me Project</title>
        
-    <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree|K2D|Pacifico" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree|K2D|Pacifico" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    </head>
 
-</head>
+    <body>
+        <h1>Ian Kwan</h1>
+        <p> 
+            <img src="https://www.nafa.edu.sg/images/default-source/Facilities/DM/classical-animation-studio/classical-animation-studio-1.tmb-gi230.jpg?sfvrsn=4a8c7eb2_4"> 
+        </p>
 
-<body> 
-
-  <h1>Ian Kwan</h1>
-  <p> <img src="https://www.nafa.edu.sg/images/default-source/Facilities/DM/classical-animation-studio/classical-animation-studio-1.tmb-gi230.jpg?sfvrsn=4a8c7eb2_4"> 
-  </p>
-
-  <h2>About</h2>
-  <ul>
+        <h2>About</h2>
+         <ul>
    
-    <li>Ian is in 9th grade</li>
-    <li>On his free time Ian likes to blender</li>
-    <li>Ians favoirite movie is The Marshin.</li>
-    <li>Ian doesnt have a favorite musician or band.</li>
+            <li>Ian is in 9th grade</li>
+            <li>On his free time Ian likes to blender</li>
+            <li>Ians favoirite movie is The Marshin.</li>
+            <li>Ian doesnt have a favorite musician or band.</li>
    
-    </ul>
+        </ul>
   
-  <h2>In ten years</h2>
+        <h2>In ten years</h2>
 
-<p>
+        <p>
 
-In ten years Ian sees himself working at an  
-<a href="https://en.wikipedia.org/wiki/Animation_studio"> animation company</a> 
+            In ten years Ian sees himself working at an  
+            <a href="https://en.wikipedia.org/wiki/Animation_studio"> animation company</a> 
 
-</p>
+        </p>
 
-</body>
+    </body>
 
 </html>
